--- a/data/friends-manager.ui
+++ b/data/friends-manager.ui
@@ -47,14 +47,12 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="model">friends_manager_liststore</property>
-                        <property name="reorderable">True</property>
                         <property name="search_column">1</property>
+                        <property name="show_expanders">False</property>
                         <child>
                           <object class="GtkTreeViewColumn" id="treeviewcolumn1">
+                            <property name="resizable">True</property>
                             <property name="title">User</property>
-                            <property name="clickable">True</property>
-                            <property name="reorderable">True</property>
-                            <property name="sort_indicator">True</property>
                             <child>
                               <object class="GtkCellRendererText" id="treeviewcolumn1-renderer1"/>
                               <attributes>
@@ -65,10 +63,8 @@
                         </child>
                         <child>
                           <object class="GtkTreeViewColumn" id="treeviewcolumn2">
+                            <property name="resizable">True</property>
                             <property name="title">Name</property>
-                            <property name="clickable">True</property>
-                            <property name="reorderable">True</property>
-                            <property name="sort_indicator">True</property>
                             <child>
                               <object class="GtkCellRendererText" id="treeviewcolumn2-renderer1"/>
                               <attributes>
@@ -79,10 +75,8 @@
                         </child>
                         <child>
                           <object class="GtkTreeViewColumn" id="treeviewcolumn3">
+                            <property name="resizable">True</property>
                             <property name="title">Am I following them?</property>
-                            <property name="clickable">True</property>
-                            <property name="reorderable">True</property>
-                            <property name="sort_indicator">True</property>
                             <child>
                               <object class="GtkCellRendererText" id="treeviewcolumn3-renderer1"/>
                               <attributes>
@@ -93,10 +87,8 @@
                         </child>
                         <child>
                           <object class="GtkTreeViewColumn" id="treeviewcolumn4">
+                            <property name="resizable">True</property>
                             <property name="title">Are they following me?</property>
-                            <property name="clickable">True</property>
-                            <property name="reorderable">True</property>
-                            <property name="sort_indicator">True</property>
                             <child>
                               <object class="GtkCellRendererText" id="treeviewcolumn4-renderer1"/>
                               <attributes>
