--- a/data/profile-viewer.ui
+++ b/data/profile-viewer.ui
@@ -27,19 +27,17 @@
         </child>
         <child>
           <object class="GtkVBox" id="title_vbox">
-            <property name="visible">True</property>
             <property name="orientation">vertical</property>
             <child>
               <placeholder/>
             </child>
           </object>
           <packing>
-            <property name="position">3</property>
+            <property name="position">2</property>
           </packing>
         </child>
         <child>
           <object class="GtkVBox" id="profile_vbox">
-            <property name="visible">True</property>
             <property name="orientation">vertical</property>
             <property name="spacing">1</property>
             <child>
@@ -49,7 +47,37 @@
           <packing>
             <property name="padding">3</property>
             <property name="pack_type">end</property>
-            <property name="position">2</property>
+            <property name="position">6</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkHBox" id="latest_update_hbox">
+            <child>
+              <object class="GtkLabel" id="updated_when_label">
+                <property name="xalign">1</property>
+                <property name="label" translatable="yes">&lt;b&gt;Last Update:&lt;/b&gt; &lt;i&gt;[%d (seconds|minutes|hours|days|weeks) ago.]&lt;/i&gt;</property>
+                <property name="use_markup">True</property>
+              </object>
+              <packing>
+                <property name="position">0</property>
+              </packing>
+            </child>
+          </object>
+          <packing>
+            <property name="pack_type">end</property>
+            <property name="position">5</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkVBox" id="latest_update_vbox">
+            <property name="orientation">vertical</property>
+            <child>
+              <placeholder/>
+            </child>
+          </object>
+          <packing>
+            <property name="pack_type">end</property>
+            <property name="position">4</property>
           </packing>
         </child>
         <child internal-child="action_area">
