get2gnow #0000DDaC4 - *tick-tock*...get ready, get set, go!
Alrighty about time, yes, I've had time to focus on working on get2gnow, starting with a 'from scratch' setup.  Yep, I nuked everything & did a fresh install, fixed this - tweaked that - rewrote another thing.  Than I did it all over again, and again, and again.

So I've gotten to the route of a ton problems & random issues.  Now for starters, new accounts can be created, deleted, connected to, & fiddled with pretty much all you want.  You may get gtk to toss some assert messages to the console but just try & crash it...I dare you ;-)

I'm not trying to come off as arrogant, only demonstrating that I've fixed a ton today.  Though that by no way means I can promise 'every things' fixed - just a crap load.

Several issues with creating new accounts have been fixed.  Some where some issues with the ServiceDialog buttons acting weird, others where causing incorrect disconnections, & just random weirdness.

I've also done a ton of work to finish my work on my new 'Connect' button & feature.  That said its not working all of the time, especially not with 'unsaved' accounts, so to avoid previous confusions, I've just 'hidden' the button for now, until I have it working under all possible situations, better to avoid confussion than to expect or even hope any of this ever get's ready by any one.

I also completely rewrote my primary gconfig method, namely, 'gconfig_if_bool'.  So it now correctly loads & sets default values even if the default scheme has not been installed yet.  This will mean a much faster start-up & lower memory foot print for any one who hasn't tweaked their preferences.

I've also completely refactored my background monitoring of DMs & @ replies & they're all working correctly again & much faster than before.  I'm going to be doing a complete reworking of how get2gnow processes timelines.  I've extended it long past its original implementation & now the code I 'inherited' is more 'in the way' & b

--- a/data/services-dialog.ui
+++ b/data/services-dialog.ui
@@ -255,7 +255,6 @@
                 <child>
                   <object class="GtkButton" id="online_service_connect_button">
                     <property name="label" translatable="yes">gtk-connect</property>
-                    <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
                     <property name="use_stock">True</property>
@@ -279,7 +278,7 @@
             <property name="layout_style">end</property>
             <child>
               <object class="GtkButton" id="cancel_button">
-                <property name="label">gtk-cancel</property>
+                <property name="label">gtk-close</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="can_default">True</property>
