--- a/data/popup-dialog.ui
+++ b/data/popup-dialog.ui
@@ -2,32 +2,25 @@
 <interface>
   <!-- interface-requires gtk+ 2.12 -->
   <!-- interface-naming-policy toplevel-contextual -->
-  <object class="GtkDialog" id="entry_popup">
-    <property name="visible">True</property>
-    <property name="border_width">6</property>
-    <property name="title" translatable="yes">Add a friend</property>
-    <property name="window_position">center-on-parent</property>
-    <property name="type_hint">dialog</property>
+  <object class="GtkListStore" id="online_services_list_store">
+    <columns>
+      <!-- column-name url -->
+      <column type="gchararray"/>
+      <!-- column-name OnlineService -->
+      <column type="gpointer"/>
+    </columns>
+  </object>
+  <object class="GtkMessageDialog" id="entry_popup">
+    <property name="border_width">5</property>
+    <property name="type_hint">normal</property>
     <property name="skip_taskbar_hint">True</property>
-    <property name="skip_pager_hint">True</property>
+    <property name="has_separator">False</property>
+    <property name="message_type">question</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="vbox">
         <property name="visible">True</property>
-        <property name="spacing">12</property>
-        <child>
-          <object class="GtkLabel" id="used_for_label">
-            <property name="visible">True</property>
-            <property name="xalign">0.05000000074505806</property>
-            <property name="yalign">0.10000000149011612</property>
-            <property name="label" translatable="yes">label</property>
-            <property name="use_markup">True</property>
-            <property name="wrap">True</property>
-            <property name="wrap_mode">word-char</property>
-          </object>
-          <packing>
-            <property name="position">0</property>
-          </packing>
-        </child>
+        <property name="orientation">vertical</property>
+        <property name="spacing">2</property>
         <child>
           <object class="GtkFrame" id="online_services_frame">
             <property name="visible">True</property>
@@ -62,7 +55,8 @@
             </child>
           </object>
           <packing>
-            <property name="position">1</property>
+            <property name="pack_type">end</property>
+            <property name="position">3</property>
           </packing>
         </child>
         <child>
@@ -78,6 +72,7 @@
                   <object class="GtkEntry" id="entry">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="invisible_char">&#x25CF;</property>
                   </object>
                 </child>
               </object>
@@ -93,11 +88,12 @@
             </child>
           </object>
           <packing>
+            <property name="pack_type">end</property>
             <property name="position">2</property>
           </packing>
         </child>
         <child internal-child="action_area">
-          <object class="GtkHButtonBox" id="hbuttonbox1">
+          <object class="GtkHButtonBox" id="dialog-action_area">
             <property name="visible">True</property>
             <property name="layout_style">end</property>
             <child>
@@ -106,7 +102,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="can_default">True</property>
-                <property name="receives_default">False</property>
+                <property name="receives_default">True</property>
                 <property name="use_stock">True</property>
               </object>
               <packing>
@@ -121,7 +117,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="can_default">True</property>
-                <property name="receives_default">False</property>
+                <property name="receives_default">True</property>
                 <property name="use_stock">True</property>
               </object>
               <packing>
@@ -134,7 +130,7 @@
           <packing>
             <property name="expand">False</property>
             <property name="pack_type">end</property>
-            <property name="position">3</property>
+            <property name="position">0</property>
           </packing>
         </child>
       </object>
@@ -143,13 +139,5 @@
       <action-widget response="-6">cancel_button</action-widget>
       <action-widget response="-5">okay_button</action-widget>
     </action-widgets>
-  </object>
-  <object class="GtkListStore" id="online_services_list_store">
-    <columns>
-      <!-- column-name url -->
-      <column type="gchararray"/>
-      <!-- column-name OnlineService -->
-      <column type="gpointer"/>
-    </columns>
   </object>
 </interface>
