--- a/data/tweet-list.ui
+++ b/data/tweet-list.ui
@@ -245,6 +245,7 @@
             </child>
             <child>
               <object class="GtkTreeViewColumn" id="tweet_list_string_tweet_tree_view_column">
+                <property name="resizable">True</property>
                 <property name="sizing">fixed</property>
                 <property name="title">Update</property>
                 <property name="expand">True</property>
@@ -256,7 +257,7 @@
                     <property name="editable">True</property>
                     <property name="rise">13</property>
                     <property name="stretch">semi-condensed</property>
-                    <property name="wrap_mode">word-char</property>
+                    <property name="wrap_mode">word</property>
                     <property name="wrap_width">200</property>
                   </object>
                   <attributes>
@@ -267,19 +268,20 @@
             </child>
             <child>
               <object class="GtkTreeViewColumn" id="tweet_list_string_from_tree_view_column">
+                <property name="resizable">True</property>
                 <property name="sizing">fixed</property>
-                <property name="fixed_width">124</property>
-                <property name="min_width">60</property>
-                <property name="max_width">124</property>
+                <property name="fixed_width">60</property>
                 <property name="title">From:</property>
                 <child>
                   <object class="GtkCellRendererText" id="tweet_list_string_from_cell_renderer_text">
+                    <property name="xpad">4</property>
+                    <property name="ypad">4</property>
                     <property name="yalign">0</property>
                     <property name="alignment">right</property>
                     <property name="stretch">extra-condensed</property>
                     <property name="variant">small-caps</property>
                     <property name="wrap_mode">word-char</property>
-                    <property name="wrap_width">124</property>
+                    <property name="wrap_width">60</property>
                   </object>
                   <attributes>
                     <attribute name="markup">13</attribute>
@@ -289,18 +291,19 @@
             </child>
             <child>
               <object class="GtkTreeViewColumn" id="tweet_list_string_rcpt_tree_view_column">
+                <property name="resizable">True</property>
                 <property name="sizing">fixed</property>
-                <property name="fixed_width">124</property>
-                <property name="min_width">60</property>
-                <property name="max_width">124</property>
+                <property name="fixed_width">60</property>
                 <property name="title">RCPT:</property>
                 <child>
                   <object class="GtkCellRendererText" id="tweet_list_string_rcpt_cell_renderer_text">
+                    <property name="xpad">4</property>
+                    <property name="ypad">4</property>
                     <property name="yalign">0</property>
                     <property name="alignment">right</property>
                     <property name="stretch">extra-condensed</property>
                     <property name="wrap_mode">word-char</property>
-                    <property name="wrap_width">124</property>
+                    <property name="wrap_width">60</property>
                   </object>
                   <attributes>
                     <attribute name="markup">14</attribute>
@@ -310,9 +313,9 @@
             </child>
             <child>
               <object class="GtkTreeViewColumn" id="tweet_list_created_ago_str_tree_view_column">
+                <property name="resizable">True</property>
                 <property name="sizing">fixed</property>
                 <property name="fixed_width">112</property>
-                <property name="max_width">115</property>
                 <property name="title">Received</property>
                 <child>
                   <object class="GtkCellRendererText" id="tweet_list_created_ago_str_cell_renderer_text">
@@ -321,7 +324,8 @@
                     <property name="stretch">condensed</property>
                     <property name="style">italic</property>
                     <property name="width_chars">15</property>
-                    <property name="wrap_mode">word-char</property>
+                    <property name="wrap_mode">word</property>
+                    <property name="wrap_width">112</property>
                   </object>
                   <attributes>
                     <attribute name="text">7</attribute>
