get2gnow #0000F6aEC - nows things get fun.
Oh goodness where do I begin...well I'll start by saying I've taken get2gnow to the next level.  I've completely refactored...well almost every thing.

My biggest change is that I've made everything fully OO w/some AO aspects as well.  I've drasticlly improved get2gnow's preformance.

My most noticable change is my rewrite of get2gnow's tweet-list viewer.  get2gnow now supports tabs for each timeline & will auto-matically handle monitoring the timelines.

There's alot here & it all kicks ass...sadly I'm sick again so my detailed write-up will have to wait, except to say that get2gnow is getting to a stage where its truly cool.

Now I'm gonna try to stop shaking, spasming, and crying.  I hope others have fun with get2gnow & I'd love any feed back.

Sorting now works correctly, even using the 'since_id' query attribute.  I've also added two new keyboard shortcutss, well four actuall: <Alt>|<Ctrl>+Page Up|Page Down now cycles through the open tabs/pages/timelines.

Selecting a tweet via mouse & vie keyboard commands now all work correctly.

Lastly I've improved how notifications are displayed to keep them from over laying each other, notification isn't perfect but its getting a lot better.

Lastly, & an *uber-w00t!* to me, for getting it done. I've implemented the 'since_id' query string parameter when updating timelines but it was causing issues with sorting, since '12 seconds ago' isn't 12 seconds ago an hour later.  So I've finally implemented my GtkTreeModelForEachFunc method that updates how long ago the update was posted before new updates are loaded into the tweet_list.

tweet_list is nolong truly inheriting from SexyTreeView, except for 'Sexy' tooltips...its become a custom widget of its own.

Lastly I've implement tweet_list clean-up so the 'max_tweet' spin button/selection now works correctly & older tweets are removed before new updates are loaded.  This way the tweet list won't get to loaded and and end up just eat

--- a/data/tweet-list.ui
+++ b/data/tweet-list.ui
@@ -116,7 +116,8 @@
                         <child>
                           <object class="GtkAlignment" id="tweet_list_max_tweets_alignment">
                             <property name="visible">True</property>
-                            <property name="left_padding">12</property>
+                            <property name="xalign">1</property>
+                            <property name="xscale">0.25</property>
                             <child>
                               <object class="GtkSpinButton" id="tweet_list_max_tweets_spin_button">
                                 <property name="visible">True</property>
@@ -136,7 +137,7 @@
                         <child type="label">
                           <object class="GtkLabel" id="tweet_list_max_tweets_label">
                             <property name="visible">True</property>
-                            <property name="label" translatable="yes">&lt;b&gt;Ma_x updates&lt;/b&gt;</property>
+                            <property name="label" translatable="yes">&lt;b&gt;Ma_x updates:&lt;/b&gt;</property>
                             <property name="use_markup">True</property>
                             <property name="use_underline">True</property>
                           </object>
