--- a/data/tweet-list.ui
+++ b/data/tweet-list.ui
@@ -237,6 +237,7 @@
                   <object class="GtkCellRendererPixbuf" id="tweet_list_pixbuf_avatar_cell_renderer_pixbuf">
                     <property name="xpad">5</property>
                     <property name="ypad">5</property>
+                    <property name="yalign">0</property>
                   </object>
                   <attributes>
                     <attribute name="pixbuf">11</attribute>
@@ -254,6 +255,7 @@
                 <child>
                   <object class="GtkCellRendererText" id="tweet_list_string_tweet_cell_renderer_text">
                     <property name="xpad">5</property>
+                    <property name="ypad">5</property>
                     <property name="yalign">0</property>
                     <property name="editable">True</property>
                     <property name="rise">13</property>
@@ -271,18 +273,18 @@
               <object class="GtkTreeViewColumn" id="tweet_list_string_from_tree_view_column">
                 <property name="resizable">True</property>
                 <property name="sizing">fixed</property>
-                <property name="fixed_width">60</property>
+                <property name="fixed_width">95</property>
                 <property name="title">From:</property>
                 <child>
                   <object class="GtkCellRendererText" id="tweet_list_string_from_cell_renderer_text">
-                    <property name="xpad">4</property>
-                    <property name="ypad">4</property>
+                    <property name="xpad">5</property>
+                    <property name="ypad">5</property>
                     <property name="yalign">0</property>
                     <property name="alignment">right</property>
                     <property name="stretch">extra-condensed</property>
                     <property name="variant">small-caps</property>
                     <property name="wrap_mode">word-char</property>
-                    <property name="wrap_width">60</property>
+                    <property name="wrap_width">85</property>
                   </object>
                   <attributes>
                     <attribute name="markup">13</attribute>
@@ -294,17 +296,17 @@
               <object class="GtkTreeViewColumn" id="tweet_list_string_rcpt_tree_view_column">
                 <property name="resizable">True</property>
                 <property name="sizing">fixed</property>
-                <property name="fixed_width">60</property>
+                <property name="min_width">95</property>
                 <property name="title">RCPT:</property>
                 <child>
                   <object class="GtkCellRendererText" id="tweet_list_string_rcpt_cell_renderer_text">
-                    <property name="xpad">4</property>
-                    <property name="ypad">4</property>
+                    <property name="xpad">5</property>
+                    <property name="ypad">5</property>
                     <property name="yalign">0</property>
                     <property name="alignment">right</property>
                     <property name="stretch">extra-condensed</property>
                     <property name="wrap_mode">word-char</property>
-                    <property name="wrap_width">60</property>
+                    <property name="wrap_width">85</property>
                   </object>
                   <attributes>
                     <attribute name="markup">14</attribute>
@@ -316,7 +318,7 @@
               <object class="GtkTreeViewColumn" id="tweet_list_created_ago_str_tree_view_column">
                 <property name="resizable">True</property>
                 <property name="sizing">fixed</property>
-                <property name="fixed_width">112</property>
+                <property name="fixed_width">80</property>
                 <property name="title">Received</property>
                 <child>
                   <object class="GtkCellRendererText" id="tweet_list_created_ago_str_cell_renderer_text">
@@ -324,9 +326,8 @@
                     <property name="alignment">right</property>
                     <property name="stretch">condensed</property>
                     <property name="style">italic</property>
-                    <property name="width_chars">15</property>
                     <property name="wrap_mode">word</property>
-                    <property name="wrap_width">112</property>
+                    <property name="wrap_width">70</property>
                   </object>
                   <attributes>
                     <attribute name="text">7</attribute>
