get2gnow #0000FCaEC - Whatfore & wherehow...Worth while stuff & a bunch of wtf
I'd finally & completely fixed my many times aforementioned issues with get2gnow appending twitter's latest update id over & over.  Its a gconf sync issue, gconf client itsn't saving the newest id correctly for timelines & replies.  So it was appending the latest update over & over & over & over & over & over & over & again...

& yes I want to keep typing over & over - over & over.  Its almost as annoying as the bug felt, but not as annoying as the fix.  I do know its fixed: finally, fully, & completely.  What I still don't get is why it wasn't breaking in more placese.  ~shrug~ whatfore & wherehow.  ;-) yeah, I just wanted to say it, in fact I feel I may have a release name.

*uber-w00t what I've finally figured it out what & why get2gnow was endlessly appending the last new twitter update endlessly & so *uber-w00t!* I've finally fixed get2gnow's since_id issue.  It was a problem with casting gulong to gfloat.  Once I realized, thnx to many many egreps through get2gnow's debug log,  I've had to refactor my User & UserStatus objects to parse user ids as floats and refactored my OnlineService methods for requesting last update ids to use float values.  I'd already added get & set float methods to my gconf client aspect.  I'm using float values becuase I have very lil doubt that status ids will soon out grow the maximum integer size, especially on smaller machines like netbooks and etc.

I really need to think about using sqlite or something else for storage so I can have something more flexible & platform indipenant - but that's a much longer term goal...well its at least something for my next version.

Now on to stuff some new stuff.

I've refactored, yes again, my debugging aspect.  Its now much more efficiant and has a much lower memory foot print.  I continue to improve my debugging aspect because of how much get2gnow uses this system & how much data is either out put or logged.  So I 

--- a/data/tweet-list.in.ui
+++ b/data/tweet-list.in.ui
@@ -22,10 +22,10 @@
   </object>
   <object class="GtkListStore" id="tweet_list_list_store">
     <columns>
-      <!-- column-name ULONG_TWEET_ID -->
-      <column type="gulong"/>
-      <!-- column-name ULONG_USER_ID -->
-      <column type="gulong"/>
+      <!-- column-name GFLOAT_TWEET_ID -->
+      <column type="gfloat"/>
+      <!-- column-name GFLOAT_USER_ID -->
+      <column type="gfloat"/>
       <!-- column-name STRING_USER -->
       <column type="gchararray"/>
       <!-- column-name STRING_NICK -->
