get2gnow #0000FCaEC - sorting things up.
I've improved how get2gnow appends new updates, by having it prepend them instead.  I've also improved when & where get2gnow updat61 the age of updates so now new updates are showing up correctly at the top of the list, I had a bug where I wasn't updated the last update in the list, which corrisponds to the newest update.

I've also improved when get2gnow updates the 'age' of updates so it will update their age even when the TweetList doesn't end up with any new updates.

A small update - but I'm just getting started & even small its an uber shiny update.

Committed on: 2009-06-26 @ 04:24:07 AM

--- a/data/tweet-list.in.ui
+++ b/data/tweet-list.in.ui
@@ -72,6 +72,7 @@
                     <property name="label" translatable="yes">_Refresh</property>
                     <property name="use_underline">True</property>
                     <property name="stock_id">gtk-refresh</property>
+                    <accelerator key="r" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
