get2gnow #0000FCaEC - sorting things up...picky preferences.
I've improved how get2gnow appends new updates, by having it prepend them instead.  I've also improved when & where get2gnow updat61 the age of updates so now new updates are showing up correctly at the top of the list, I had a bug where I wasn't updated the last update in the list, which corrisponds to the newest update.

I've also improved when get2gnow updates the 'age' of updates so it will update their age even when the TweetList doesn't end up with any new updates.

I also found some issues with my refactoring of my preferences dialog.  These are all fixed and we can all setup our prefernces again.  Sorry about this error lasting so long, wait no I'm not sorry at all, if you're having problems contact me, please, if you can't do that much than I'd rather you not use get2gnow.  Even window & mac users can call tech support the least you can do is message me, @ me, myspace me, or what ever.  And no I don't do email, its the 21st century not the 1970s.  Email's dead, get over it!

A small update - but I'm just getting started & even small its an uber shiny update.

Committed on: 2009-06-26 @ 05:32:35 AM

--- a/data/preferences.ui
+++ b/data/preferences.ui
@@ -331,8 +331,8 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkCheckButton" id="notify_all_new_tweets_check_button">
-                                <property name="label" translatable="yes">_Notify me when I get any other new messages.</property>
+                              <object class="GtkCheckButton" id="notify_all_new_updates_check_button">
+                                <property name="label" translatable="yes">_Notify me when I get all new messages.</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
