--- a/data/tweet-list.in.ui
+++ b/data/tweet-list.in.ui
@@ -22,10 +22,10 @@
   </object>
   <object class="GtkListStore" id="tweet_list_list_store">
     <columns>
-      <!-- column-name GFLOAT_TWEET_ID -->
-      <column type="gfloat"/>
-      <!-- column-name GFLOAT_USER_ID -->
-      <column type="gfloat"/>
+      <!-- column-name GDOUBLE_TWEET_ID -->
+      <column type="gdouble"/>
+      <!-- column-name GDOUBLE_USER_ID -->
+      <column type="gdouble"/>
       <!-- column-name STRING_USER -->
       <column type="gchararray"/>
       <!-- column-name STRING_NICK -->
